[tool.poetry]
name = "youtool"
version = "0.1.1"
description = "Easy-to-use library to access YouTube Data API v3 in bulk operations"
authors = ["Álvaro Justen <alvarojusten@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
tqdm = "^4.64.0"
yt-dlp = "^2023.4.1"
chat-downloader = "0.2.8"
isodate = "^0.6.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^23.3.0"
flake8 = "^5.0.4"
ipython = "^8.4.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-dependency = "^0.5.1"
twine = "^4.0.1"
wheel = "^0.37.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
youtool = "youtool.cli:main"
