[tool.poetry]
name = "youtool"
version = "0.1.1"
description = "Easy-to-use library to access YouTube Data API v3 in bulk operations"
authors = ["Álvaro Justen <alvarojusten@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
tqdm = "^4.66.4"
yt-dlp = "^2024.7.2"
chat-downloader = "^0.2.8"
isodate = "^0.6.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
autoflake = "^2.3.1"
black = "^24.4.2"
flake8 = "^7.1.0"
ipython = "^8.26.0"
isort = "^5.13.2"
pytest-dependency = "^0.6.0"
twine = "^5.1.1"
wheel = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
youtool = "youtool.cli:main"
