[metadata]
name = youtool
version = 0.2.0
description = Easy-to-use library to access YouTube Data API v3 in bulk operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PythonicCafe/youtool/
keywords = youtube api data videos
author = Ãlvaro Justen
author_email = alvarojusten@gmail.com
license = GNU Lesser General Public License v3 (LGPLv3)
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires = file: requirements/base.txt

[options.extras_require]
cli = file: requirements/cli.txt
dev = file: requirements/dev.txt
transcription = file: requirements/transcription.txt
livechat = file: requirements/livechat.txt

[options.packages.find]
exclude =
    data*
    test*
    Makefile

[flake8]
max-line-length = 120
exclude = .tox,.git,docs,data/*
ignore=I001,I003,I004,E231,E501
